# advent_of_code

./: .gitignore
advent_of_python/: commands_2015.md  commands_2016.md  commands_2023.md  commands_2024.md  inputs.http  pyproject.toml
advent_of_python/src/: cli.py  factory.py  solver.py  solver_error.py  solver_factory.py  solver_template.py  transformer_factory.py
advent_of_python/src/application/: api.py  container.py  endpoints.py
advent_of_python/src/domain/: transformer_01.py  transformer_02.py  transformer_03.py  transformer_04.py  transformer_05.py  transformer_09.py  transformer_10.py  transformer_11.py  transformer_12.py  transformer_13.py  transformer_14.py  transformer_15.py  transformer_16.py  transformer_17.py  transformer_18.py  transformer_19.py  transformer_20.py  transformer_21.py  transformer_22.py  transformer_23.py  transformer_24.py  transformer_25.py  transformer_factory.py
advent_of_python/src/solvers_2015/: solver_01.py  solver_02.py  solver_03.py  solver_04.py  solver_09.py  solver_template.py  transformer_01.py  transformer_02.py  transformer_09.py
advent_of_python/src/solvers_2016/: solver_01.py  solver_08.py  solver_09.py
advent_of_python/src/solvers_2023/: transformer_01.py  transformer_02.py  transformer_03.py  transformer_04.py  transformer_05.py  transformer_09.py  transformer_10.py  transformer_11.py  transformer_12.py  (+13 more)
advent_of_python/test/: test_solver_template.py
advent_of_rust/: Cargo.toml  commands_2015.md  commands_2023.md  inputs.http
advent_of_rust/proto/: api.proto
advent_of_rust/src/: cli.rs
(+219 files in other folders)
