[package]
name = "advent-of-rust-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"] }
clap-num = "1.1.1"
counter = "0.6.0"
log = "0.4.22"
rust-crypto = "0.2.36"
regex = "1.11.0"
lazy_static = "1.5.0"
cached = "0.53.1"

[[bin]]
name = "cli"
path = "src/cli.rs"

[dev-dependencies]
ctor = "0.2.8"
